Added New Service - Digital Footprint

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -17,7 +17,7 @@
             <div class="nav-item">
                 <a href="#services">Services</a>
                 <div class="dropdown">
-                    <a href="#">Digital footprint</a>
+                    <a href="{{ url_for('digital_footprints') }}">Digital footprint</a>
                     <a href="#">Core skills</a>
                     <a href="#">Process Management</a>
                     <a href="#">Comm. skills</a>
