--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -7,7 +7,7 @@
     <div class="content">
         <h1>Building the Future!<br> Skills.<br>Progress.<br>Success.</h1>
         <p>Hey engineers! Struggling to turn all that overwhelming info into a career that rocks? We've got your back. Our Student Partner LMS is here to power your journey with personalized roadmaps, hands-on skill-building, and awesome mentorship. Ready to go from classroom to career with confidence? Let's make your engineering dreams a reality!</p>
-        <button class="btn">Get Started</button>
+        <a href="{{ url_for('digital_footprints') }}" class="btn">Get Started</a>
     </div>
     <div class="shapes">
         <div class="shape circle"></div>
