--- a/templates/layout.html
+++ b/templates/layout.html
@@ -18,7 +18,7 @@
                 <a href="#services">Services</a>
                 <div class="dropdown">
                     <a href="{{ url_for('digital_footprints') }}">Digital footprint</a>
-                    <a href="{{ url_for('core_skills') }}">Core skills</a>
+                    <a href="{{ url_for('course_recommendation') }}">Course Recommendation</a>
                     <a href="#">Process Management</a>
                     <a href="#">Comm. skills</a>
                 </div>
