Added code for the communication_skills endpoint

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -19,8 +19,8 @@
                 <div class="dropdown">
                     <a href="{{ url_for('digital_footprints') }}">Digital footprint</a>
                     <a href="{{ url_for('course_recommendation') }}">Course Recommendation</a>
-                    <a href="#">Process Management</a>
-                    <a href="#">Comm. skills</a>
+                    <a href="{{ url_for('udemy_recommendation') }}">Udemy</a>
+                    <a href="{{ url_for('communication_skills') }}">Comm. skills</a>
                 </div>
             </div>
             <a href="#about">About Us</a>
