--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -12,7 +12,7 @@
     </div>
 </section>
 
-<section class="cards-section">
+<!-- <section class="cards-section">
     <div class="cards-container">
         <div class="card">
             <h4>Personalized Roadmaps</h4>
@@ -35,5 +35,5 @@
             <a href="#" class="btn">Join Now</a>
         </div>
     </div>
-</section>
+</section> -->
 {% endblock %}
