--- a/templates/course_recommendation.html
+++ b/templates/course_recommendation.html
@@ -5,7 +5,7 @@
 {% block content %}
     <div class="container">
         <br>
-        <h2>Enter Your Skills</h2>
+        <h2>Enter Skills :</h2>
         <br>
         <form method="post" class="form">
             <input type="text" name="skills" placeholder="Enter skills (e.g., Python, Machine Learning)" 
@@ -138,6 +138,19 @@
             padding-right: 15px;  /* Add padding to prevent text from touching the right side */
             white-space: normal;  /* Allow text to wrap */
             font-size: 0.9em;  /* Adjust font size for better readability */
+        }
+        .disclaimer {
+            margin-top: 40px;
+            padding: 15px;
+            background-color: #f0f0f0;
+            border-radius: 5px;
+            text-align: center;
+            font-size: 14px;
+            color: #777;
+        }
+
+        .disclaimer p {
+            margin: 0;
         }
     </style>
 
