Added roadmaps and contact files

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -20,11 +20,13 @@
                     <a href="{{ url_for('digital_footprints') }}">Digital footprint</a>
                     <a href="{{ url_for('course_recommendation') }}">Coursera Course Recommendation</a>
                     <a href="{{ url_for('udemy_recommendation') }}">Udemy Course Recommendation</a>
+                    <a href="{{ url_for('roadmaps') }}">Roadmaps</a>
                     <a href="{{ url_for('communication_skills') }}">Comm. skills</a>
+                    
                 </div>
             </div>
             <a href="#about">About Us</a>
-            <a href="#contact">Contact</a>
+            <a href="{{ url_for('contact') }}">Contact</a>
         </nav>
     </header>
     
