add about page and some minor changes to contact and digital footprint file

--- a/templates/digital_footprints.html
+++ b/templates/digital_footprints.html
@@ -8,7 +8,7 @@
     <p>Your digital footprint is the trail of data you leave behind while using the internet. This includes social media activity and shared content.</p>
 
     <h3>Why It Matters</h3>
-    <p>Understanding your digital footprint helps you manage online privacy, improve security, and create a positive online presence.</p>
+    <p>Understanding your digital footprint helps you manage and create a positive online presence.</p>
     
     <h3>Building a Strong Online Presence for Your Career</h3>
     <p>Students should create accounts on the following platforms to build their digital identity and career opportunities:</p>
