--- a/templates/contact.html
+++ b/templates/contact.html
@@ -9,7 +9,7 @@
         
         <div class="contact-info">
             <h3>GitHub Profile</h3>
-            <p><a href="https://github.com/Prayesh13" target="_blank">GitHub</a></p>
+            <p><a href="https://github.com/Prayesh13" target="_blank"><u>Profile Link</u></a></p>
             
             <h3>Team Members</h3>
             <ul>
