--- a/templates/layout.html
+++ b/templates/layout.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}LMS Portal{% endblock %}</title>
+    
+    <link rel="icon" href="{{ url_for('static', filename='fav.png') }}" type="image/png">
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
 </head>
 <body>
@@ -25,7 +27,7 @@
                     
                 </div>
             </div>
-            <a href="#about">About Us</a>
+            <a href="{{ url_for('about') }}">About</a>
             <a href="{{ url_for('contact') }}">Contact</a>
         </nav>
     </header>
