--- a/templates/digital_footprints.html
+++ b/templates/digital_footprints.html
@@ -39,4 +39,12 @@
         </div>
     </div>
 </section>
+<style>
+    body {
+        background-image: url("{{ url_for('static', filename='bg.jpg') }}");
+        background-size: cover;
+        background-position: center center;
+        background-attachment: fixed;
+    }
+</style>
 {% endblock %}
