--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <section class="hero" style="width: 100vw; max-width: 100%; padding: 50px 0; text-align: center;">
-    <div class="content" style="width: 90%; margin: 0 auto;">
+    <div class="content">
         <h1>Building the Future!</h1>
         <h2 style="font-size: 3rem;">Skills.<br>Progress.<br>Success.</h2>
         <p>Hey engineers! Feeling overwhelmed by too much information? Wondering how to turn it into a successful career?  
@@ -14,4 +14,13 @@
         <a href="{{ url_for('digital_footprints') }}" class="btn">Get Started</a>
     </div>
 </section>
+
+<style>
+    body {
+        background-image: url("{{ url_for('static', filename='bg.jpg') }}");
+        background-size: cover; /* Ensure the background image covers the whole page */
+        background-position: center center; /* Center the image */
+        background-attachment: fixed; /* Make the background fixed when scrolling */
+    }
+</style>
 {% endblock %}
