--- a/templates/udemy_recommendation.html
+++ b/templates/udemy_recommendation.html
@@ -30,21 +30,11 @@
 
             <button type="submit"><h3>Get Recommendations</h3></button>
         </form>
-
-        <br>
-        <br>
-        <br>
-        <br>
-        {% if user_subject or user_level %}
-            <h4>Your Selection:</h4>
-            <p><strong>Subject:</strong> {{ user_subject | title }}</p>
-            <p><strong>Level:</strong> {{ user_level | title }}</p>
-        {% endif %}
-
         <br>
         <br>
         <br>
         {% if courses is not none %}
+        <div class="results">
             <h3>Recommended Courses (Udemy)</h3>
             <div class="cards-container">
                 {% for index, course in courses.iterrows() %}
@@ -59,6 +49,7 @@
                     </div>
                 {% endfor %}
             </div>
+        </div>
         {% endif %}
     </div>
 
@@ -97,12 +88,15 @@
             border-radius: 5px;
             cursor: pointer;
         }
-
+        .results {
+            margin-top: 15%;
+            text-align: center;
+        }
         .cards-container {
             display: grid;
             grid-template-columns: repeat(3, 1fr);  /* 3 cards per row */
             gap: 20px;
-            margin-top: 20px;
+            margin-top: 25px;
         }
 
         .card {
