update about file

--- a/templates/about.html
+++ b/templates/about.html
@@ -8,7 +8,7 @@
         <p>Welcome to the Learning Management System (LMS) project, a platform designed to help users find the best online courses for their personal and professional growth. This system leverages machine learning and personalized recommendations to suggest relevant courses from platforms like Coursera and Udemy, based on users' skill sets and interests.</p>
         
         <h3>Project Overview</h3>
-        <p>The LMS is designed to provide personalized course recommendations to users, helping them make informed decisions about their learning paths. With past data of courses from Coursera and Udemy, the system uses recommendation algorithms such as content-based filtering and skills-based matching to recommend courses suited to the user's needs.</p>
+        <p>The LMS is designed to provide course recommendations to users, helping them make informed decisions about their learning paths. With past data of courses from Coursera and Udemy, the system uses recommendation algorithms such as content-based filtering and skills-based matching to recommend courses suited to the user's needs.</p>
 
         <h3>Features</h3>
         <ul>
